# ChessEngine

./: README.md  main.py  pyproject.toml
